feat<guest> add features about guest examining